[package]
name = "tsmv"
version = "0.1.0"
authors = ["Pyry Heiskanen <pyry.heiskanen@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pathdiff = "0.2.0"
regex = "1"
ropey = "1.2.0"
structopt = "0.3"
tree-sitter = "0.19.3"

[build-dependencies]
cc = "*"
