[package]
name = "mvts"
version = "0.1.0"
authors = ["Pyry Heiskanen <pyry.heiskanen@iki.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pheis/mvts"
repository = "https://github.com/pheis/mvts"
description = "tool for moving typescript files"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1.0"
pathdiff = "0.2.0"
regex = "1"
ropey = "1.2.0"
structopt = "0.3"
tree-sitter = "0.19.3"
tree-sitter-typescript = "0.19"
walkdir = "2"
