[package]
name = "mvts"
version = "0.4.0"
authors = ["Pyry Heiskanen <pyry.heiskanen@iki.fi>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pheis/mvts"
repository = "https://github.com/pheis/mvts"
description = "Like mv but for TypeScript files"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2018"

[dependencies]
anyhow = "1.0"
pathdiff = "0.2.0"
ropey = "1.2.0"
clap = "3.0.0-beta.2"
tree-sitter = "0.19.3"
tree-sitter-typescript = "0.19"
ignore = "0.4"
rayon = "1.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
